--- a/index.html
+++ b/index.html
@@ -12,6 +12,23 @@
     <link rel="stylesheet" href="build/css/style.css">
 </head>
 <body>
-    <a class="btn btn-success" href="">Comprar</a>
+    <header class="constainer-xl header">
+        <div class="row">
+            <div class="col-md-6">
+                <img class="logo" src="img/logo.svg" alt="logo Meeti">
+                <h1 class=" display-1">
+                    Únete, la vida está en un Meeti
+                </h1>
+                <p class="fs-3">
+                    Únete a mas de 300 mil organizadores que están compartiendo su pasión y contruyendo una comunidad.
+                </p>
+                <a href="#" class="btn btn-danger">Inicia un grupo</a>
+            </div>
+            <div class="col-md-6">
+                <img class="img-fluid" src="img/header.jpg" alt="imagen header">
+            </div>
+        </div>
+    </header>
+    <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
