--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
 <body>
     <header class="constainer-xl header">
-        <div class="row">
-            <div class="col-md-6">
+        <div class="row align-items-center">
+            <div class="col-md-6 mb-5 mb-md-0">
                 <img class="logo" src="img/logo.svg" alt="logo Meeti">
                 <h1 class=" display-1">
                     Únete, la vida está en un Meeti
@@ -29,6 +29,31 @@
             </div>
         </div>
     </header>
+
+    <section class="container-xl">
+        <h2 class="fs-1 text-center">Cómo funciona Meeti</h2>
+        <p class="text-center w-50 mx-auto"> Conoce a personas nuevas que compartan tus intereses a través de eventos en línea y en persona. Crear una cuenta es gratis.</p>
+        <div class="row mt-5">
+            <div class="col-md-4">
+                <img class="img-fluid" src="/img/icono_1.svg" alt="imagen icono">
+                <h3 class="text-secondary text-center fs-4">Únete a un grupo</h3>
+                <p class="text-center">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid, praesentium. Error labore consectetur facere, illo explicabo quia earum.</p>
+            </div>
+            <div class="col-md-4">
+                <img class="img-fluid" src="/img/icono_2.svg" alt="imagen icono">
+                <h3 class="text-secondary text-center fs-4">Administra asistentes</h3>
+                <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, at dolorum! Placeat, quia dolores hic.</p>
+            </div>
+            <div class="col-md-4">
+                <img class="img-fluid" src="/img/icono_3.svg" alt="imagen icono">
+                <h3 class="text-secondary text-center fs-4">Crece tu comunidad</h3>
+                <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, architecto! Eos animi at, consectetur tenetur aut aliquam.</p>
+            </div>
+        </div>
+        <div class="d-flex justify-content-center my-5">
+            <a href="#" class="btn btn-secondary text-white">Unirse a Meeti</a>
+        </div>
+    </section>
     <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
