Main- Proximos eventos

--- a/index.html
+++ b/index.html
@@ -54,6 +54,57 @@
             <a href="#" class="btn btn-secondary text-white">Unirse a Meeti</a>
         </div>
     </section>
+
+    <main>
+        <div class="d-flex justify-content-between">
+            <h2>Proximos eventos</h2>
+            <a href="#" class="text-secondary text-decoration-none d-none d-sm-block">Explora más eventos</a>
+        </div>
+        <div class="row mt-4">
+            <div class="col-md-6 col-lg-3">
+                <div class="card">
+                    <img class=" card-img-top" src="img/evento_1.jpg" alt="imagen evento">
+                    <div class="card-body">
+                        <p class="card-text fecha fw-bold">17 de Enero 20:00 horas</p>
+                        <h3 class="card-title fs-5">Diseño de Apps con Swift</h3>
+                        <p class="card-text descripcion">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-3">
+                <div class="card">
+                    <img class=" card-img-top" src="img/evento_2.jpg" alt="imagen evento">
+                    <div class="card-body">
+                        <p class="card-text fecha fw-bold">17 de Enero 20:00 horas</p>
+                        <h3 class="card-title fs-5">Marketing en Twitter</h3>
+                        <p class="card-text descripcion">Expedita neque ipsam dicta dolore labore doloribus?</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-3">
+                <div class="card">
+                    <img class=" card-img-top" src="img/evento_3.jpg" alt="imagen evento">
+                    <div class="card-body">
+                        <p class="card-text fecha fw-bold">17 de Enero 20:00 horas</p>
+                        <h3 class="card-title fs-5">Ventas por Internet</h3>
+                        <p class="card-text descripcion"> Possimus voluptate quos rerum, corporis ea dolore nesciunt. </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-3">
+                <div class="card">
+                    <img class=" card-img-top" src="img/evento_4.jpg" alt="imagen evento">
+                    <div class="card-body">
+                        <p class="card-text fecha fw-bold">17 de Enero 20:00 horas</p>
+                        <h3 class="card-title fs-5">Todo sobre Bitcoin</h3>
+                        <p class="card-text descripcion">Lorem ipsum dolor sit amet consectetur, adipisicing.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+
+
     <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
