--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
     </section>
 
-    <main>
+    <main class="container-xl eventos mt-5">
         <div class="d-flex justify-content-between">
             <h2>Proximos eventos</h2>
             <a href="#" class="text-secondary text-decoration-none d-none d-sm-block">Explora más eventos</a>
@@ -63,7 +63,7 @@
         <div class="row mt-4">
             <div class="col-md-6 col-lg-3">
                 <div class="card">
-                    <img class=" card-img-top" src="img/evento_1.jpg" alt="imagen evento">
+                    <img class=" card-img-top rounded-3" src="img/evento_1.jpg" alt="imagen evento">
                     <div class="card-body">
                         <p class="card-text fecha fw-bold">17 de Enero 20:00 horas</p>
                         <h3 class="card-title fs-5">Diseño de Apps con Swift</h3>
@@ -73,7 +73,7 @@
             </div>
             <div class="col-md-6 col-lg-3">
                 <div class="card">
-                    <img class=" card-img-top" src="img/evento_2.jpg" alt="imagen evento">
+                    <img class=" card-img-top rounded-3" src="img/evento_2.jpg" alt="imagen evento">
                     <div class="card-body">
                         <p class="card-text fecha fw-bold">17 de Enero 20:00 horas</p>
                         <h3 class="card-title fs-5">Marketing en Twitter</h3>
@@ -83,7 +83,7 @@
             </div>
             <div class="col-md-6 col-lg-3">
                 <div class="card">
-                    <img class=" card-img-top" src="img/evento_3.jpg" alt="imagen evento">
+                    <img class=" card-img-top rounded-3" src="img/evento_3.jpg" alt="imagen evento">
                     <div class="card-body">
                         <p class="card-text fecha fw-bold">17 de Enero 20:00 horas</p>
                         <h3 class="card-title fs-5">Ventas por Internet</h3>
@@ -93,7 +93,7 @@
             </div>
             <div class="col-md-6 col-lg-3">
                 <div class="card">
-                    <img class=" card-img-top" src="img/evento_4.jpg" alt="imagen evento">
+                    <img class=" card-img-top rounded-3" src="img/evento_4.jpg" alt="imagen evento">
                     <div class="card-body">
                         <p class="card-text fecha fw-bold">17 de Enero 20:00 horas</p>
                         <h3 class="card-title fs-5">Todo sobre Bitcoin</h3>
