--- a/index.html
+++ b/index.html
@@ -104,6 +104,34 @@
         </div>
     </main>
 
+    <section class="tiendas container-xl mt-5">
+        <div class="row">
+            <div class="col-md-4">
+                <img class="img-fluid" src="img/app_1.png" alt="imagen app">                
+            </div>
+            <div class="col-md-4">
+                <img class="logo mt-5 d-block mx-auto" src="img/logo.svg" alt="logo meeti">
+                <p class="text-center fw-bold mt-5 fs-4">Mantente conectado. Descarga la aplicación.</p>
+                <div class="d-flex gap-4">
+                    <div class="col">
+                        <a href="#">
+                            <img class="img-fluid" src="img/tienda-apple.svg" alt="icono tienda apple">
+                        </a>
+                    </div>
+                    <div class="col">
+                        <a href="#">
+                            <img class="img-fluid" src="img/tienda-android.svg" alt="icono tienda android">
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <img class="img-fluid" src="img/app_2.png" alt="imagen app"> 
+            </div>
+        </div>
+    </section>
+    
+
 
     <script src="js/bootstrap.bundle.min.js"></script>
 </body>
