--- a/index.html
+++ b/index.html
@@ -130,6 +130,46 @@
             </div>
         </div>
     </section>
+
+    <footer class="footer bg-dark mt-5 pt-4 pb-2 text-white">
+        <div class="container">
+            <div>
+
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <p class="fs-5">Tu cuenta</p>
+                    <nav class="nav flex-column">
+                        <a class="nav-link" href="#">Registrarse</a>
+                        <a class="nav-link" href="#">Iniciar Seción</a>
+                        <a class="nav-link" href="#">Ayuda</a>
+                    </nav>
+                </div>
+                <div class="col-md-4">
+                    <p class="fs-5">Descubrir</p>
+                    <nav class="nav flex-column">
+                        <a class="nav-link" href="#">Grupos</a>
+                        <a class="nav-link" href="#">Calendario</a>
+                        <a class="nav-link" href="#">Temas</a>
+                        <a class="nav-link" href="#">Cuidades</a>
+                        <a class="nav-link" href="#">Eventos en línea</a>
+                        <a class="nav-link" href="#">Guías locales</a>
+                    </nav>
+                </div>
+                <div class="col-md-4">
+                    <p class="fs-5">Meeti</p>
+                    <nav class="nav flex-column">
+                        <a class="nav-link" href="#">Acerca de</a>
+                        <a class="nav-link" href="#">Blog</a>
+                        <a class="nav-link" href="#">Meeti PRO</a>
+                        <a class="nav-link" href="#">Empleo</a>
+                        <a class="nav-link" href="#">Aplicaciones</a>
+                    </nav>
+                </div>
+
+            </div>
+        </div>
+    </footer>
     
 
 
