--- a/index.html
+++ b/index.html
@@ -133,8 +133,9 @@
 
     <footer class="footer bg-dark mt-5 pt-4 pb-2 text-white">
         <div class="container">
-            <div>
-
+            <div class="d-flex align-items-center border-bottom pb-4">
+                <p class="m-0 me-2 fw-bold">Crea tu propio grupo de Meeti</p>
+                <a href="#" class="btn btn-dark border fw-bold">Primeros pasos</a>
             </div>
             <div class="row">
                 <div class="col-md-4">
@@ -166,7 +167,16 @@
                         <a class="nav-link" href="#">Aplicaciones</a>
                     </nav>
                 </div>
-
+            </div>
+            <div class="d-flex flex-column flex-md-row mt-5 align-items-center">
+                <p class="m-0 me-5">Meeti</p>
+                <nav class="nav flex-column flex flex-md-row">
+                    <a class="nav-link" href="#">Acerca de</a>
+                    <a class="nav-link" href="#">Blog</a>
+                    <a class="nav-link" href="#">Meeti PRO</a>
+                    <a class="nav-link" href="#">Empleo</a>
+                    <a class="nav-link" href="#">Aplicaciones</a>
+                </nav>
             </div>
         </div>
     </footer>
