--- a/index.html
+++ b/index.html
@@ -171,16 +171,15 @@
             <div class="d-flex flex-column flex-md-row mt-5 align-items-center">
                 <p class="m-0 me-5">Meeti</p>
                 <nav class="nav flex-column flex flex-md-row">
-                    <a class="nav-link" href="#">Acerca de</a>
-                    <a class="nav-link" href="#">Blog</a>
-                    <a class="nav-link" href="#">Meeti PRO</a>
-                    <a class="nav-link" href="#">Empleo</a>
-                    <a class="nav-link" href="#">Aplicaciones</a>
+                    <a class="nav-link me-md-2" href="#">Acerca de</a>
+                    <a class="nav-link me-md-2" href="#">Blog</a>
+                    <a class="nav-link me-md-2" href="#">Meeti PRO</a>
+                    <a class="nav-link me-md-2" href="#">Empleo</a>
+                    <a class="nav-link me-md-2" href="#">Aplicaciones</a>
                 </nav>
             </div>
         </div>
-    </footer>
-    
+    </footer>    
 
 
     <script src="js/bootstrap.bundle.min.js"></script>
