--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="build/css/style.css">
+    <!-- <link rel="stylesheet" href="build/css/style.css"> -->
+    <link rel="stylesheet" href="build/css/meeti.css">
 </head>
 <body>
-    <header class="constainer-xl header">
+    <header class="container-xl header">
         <div class="row align-items-center">
             <div class="col-md-6 mb-5 mb-md-0">
                 <img class="logo" src="img/logo.svg" alt="logo Meeti">
